*** empty log message ***
SVN-Revision: 1958

--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -1,44 +1,24 @@
-DB_TYPE=mysql
-DB_NAME=cacoresdk
-DB_CREATE_URL=jdbc:mysql://cbiodb590.nci.nih.gov:3626
-DB_CONNECTION_URL=jdbc:mysql://cbiodb590.nci.nih.gov:3626/cacoresdk
-DB_USERNAME=cacoresdk
-DB_PASSWORD=cac#476
-DB_DRIVER=org.gjt.mm.mysql.Driver
-DB_DIALECT=org.hibernate.dialect.MySQLDialect
-HBM2DDL_TYPE=validate
-
-#DB_TYPE=oracle
-#DB_NAME=cacoresdk
-#DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
-#DB_USERNAME=CACORESDK_ANT
-#DB_PASSWORD=c0r3nt!
-#DB_DRIVER=oracle.jdbc.driver.OracleDriver
-#DB_DIALECT=org.hibernate.dialect.OracleDialect
-#HBM2DDL_TYPE=validate
-
-CSM_DB_CONNECTION_URL=${DB_CONNECTION_URL}
-CSM_DB_USERNAME=${DB_USERNAME}
-CSM_DB_PASSWORD=${DB_PASSWORD}
-CSM_DB_DRIVER=${DB_DRIVER}
-CSM_DB_DIALECT=${DB_DIALECT}
-
-#DB_TYPE=mysql
-#DB_NAME=cacoresdk
-#DB_CREATE_URL=jdbc:mysql://localhost:3306/
-#DB_CONNECTION_URL=jdbc:mysql://localhost:3306/${DB_NAME}
-#DB_USERNAME=root
-#DB_PASSWORD=
-#DB_DIALECT=org.hibernate.dialect.MySQLDialect
+#DB_CONNECTION_URL=jdbc:mysql://cbiodb590.nci.nih.gov:3626/cacoresdk
+#DB_USERNAME=cacoresdk
+#DB_PASSWORD=cac#476
 #DB_DRIVER=org.gjt.mm.mysql.Driver
-#HBM2DDL_TYPE=validate
+#DB_DIALECT=org.hibernate.dialect.MySQLDialect
 
-#DB_TYPE=hsql
-#DB_NAME=cacoresdk
-#DB_CREATE_URL=jdbc:hsqldb:hsql://localhost:9001
+DB_CONNECTION_URL=jdbc:oracle:thin:@cbiodb30.nci.nih.gov:1521:CBTEST
+DB_USERNAME=CACORESDK_ANT
+DB_PASSWORD=c0r3nt!
+DB_DRIVER=oracle.jdbc.driver.OracleDriver
+DB_DIALECT=org.hibernate.dialect.OracleDialect
+
 #DB_CONNECTION_URL=jdbc:hsqldb:mem:${DB_NAME}
 #DB_USERNAME=sa
 #DB_PASSWORD=
 #DB_DIALECT=org.hibernate.dialect.HSQLDialect
 #DB_DRIVER=org.hsqldb.jdbcDriver
 #HBM2DDL_TYPE=create-drop
+
+CSM_DB_CONNECTION_URL=${DB_CONNECTION_URL}
+CSM_DB_USERNAME=${DB_USERNAME}
+CSM_DB_PASSWORD=${DB_PASSWORD}
+CSM_DB_DRIVER=${DB_DRIVER}
+CSM_DB_DIALECT=${DB_DIALECT}
