changed HBM2DDL_ENABLED to false
SVN-Revision: 1968

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -71,5 +71,5 @@ sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
 sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
 sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
 
-HBM2DDL_ENABLED=true
+HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
