added key CACHE_PROTECTION_ELEMENTS
SVN-Revision: 1992

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -20,22 +20,26 @@
 #  Value of the CSM_PROJECT_NAME property is used as a prefix when creating:
 #		1) The CSM security configuration file name
 #
+##################################################################################
+PROJECT_NAME=example
+NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
+WEBSERVICE_NAME=${PROJECT_NAME}Service
+
+##################################################################################
+#  PROJECT SECURITY PROPERTIES
+#
 #  Value of the INSTANCE_LEVEL_SECURITY is used to enable/disable CSM instance
 #  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
 #  Value of the ATTRIBUTE_LEVEL_SECURITY is used to enable/disable CSM attribute
 #  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
-#
+# 
 ##################################################################################
-PROJECT_NAME=example
-NAMESPACE_PREFIX=gme://caCORE.caCORE/3.2/
-
-SECURITY_ENABLED=false
+SECURITY_ENABLED=true
 CSM_PROJECT_NAME=sdk
-INSTANCE_LEVEL_SECURITY=false
-ATTRIBUTE_LEVEL_SECURITY=false
-
-WEBSERVICE_NAME=${PROJECT_NAME}Service
+INSTANCE_LEVEL_SECURITY=true
+ATTRIBUTE_LEVEL_SECURITY=true
+CACHE_PROTECTION_ELEMENTS=false
 
 ##################################################################################
 #  WRITABLE API PROPERTIES
@@ -43,8 +47,9 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  ENABLE_WRITABLE_API_EXTENSION if set to "yes" then it will change the
 #  service interface and corresponding implementation for writable API
 ##################################################################################
-ENABLE_WRITABLE_API_EXTENSION=no
-
+ENABLE_WRITABLE_API_EXTENSION=yes
+DATABASE_TYPE=oracle
+IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
 
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
@@ -145,8 +150,6 @@ GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
 GENERATE_XSD=true
 GENERATE_WSDD=true
-
-INCLUDE_SEARCH_EVENT_LISTENER=false
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
@@ -155,7 +158,3 @@ INCLUDE_SEARCH_EVENT_LISTENER=false
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
-
-
-DATABASE_TYPE=oracle
-IDENTITY_GENERATOR_TAG=<generator class="hilo"/>
