Hibernate Validator Implementation Changes
SVN-Revision: 2001

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -1,4 +1,5 @@
 codegen.dir=codegen
+codegen.validator.dir=${codegen.dir}/validator
 system.dir=system
 writable-api.dir=writable-api
 security.dir=${system.dir}/security
@@ -17,7 +18,9 @@ output.src.dir=${output.project.dir}/src
 output.conf.dir=${output.project.dir}/conf
 
 conf.dir=conf
+conf.validator.dir=${conf.dir}/validator
 codegen.config.dir=${conf.dir}/codegen
+codegen.validator.config.dir=${codegen.config.dir}/validator
 
 system.config.dir=${output.conf.dir}/system
 system.config.client.local.dir=${system.config.dir}/package/local-client
@@ -29,7 +32,9 @@ system.config.web.classes.dir=${system.config.dir}/web/WEB-INF/classes
 
 output.conf.dir=${output.project.dir}/conf
 output.codegen.config.dir=${output.project.dir}/${codegen.config.dir}
+output.codegen.validator.config.dir=${output.codegen.config.dir}/validator
 codegen.config.file=CodegenConfig.xml
+codegen.config.validator.file=HibernateValidatorCodegenConfig.xml
 
 build.dir=${output.project.dir}/build
 build.conf.system.web.dir=${output.conf.dir}/system/web
