--- a/SDK4/local.properties
+++ b/SDK4/local.properties
@@ -22,3 +22,5 @@ CSM_DB_USERNAME=${DB_USERNAME}
 CSM_DB_PASSWORD=${DB_PASSWORD}
 CSM_DB_DRIVER=${DB_DRIVER}
 CSM_DB_DIALECT=${DB_DIALECT}
+
+CADSR_CONNECTION_URL=http://cbvapp-d1008.nci.nih.gov:19080/caDSR
