--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -33,7 +33,7 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #
 #  Value of the ATTRIBUTE_LEVEL_SECURITY is used to enable/disable CSM attribute
 #  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
-# 
+#
 ##################################################################################
 SECURITY_ENABLED=true
 CSM_PROJECT_NAME=sdk
@@ -150,6 +150,7 @@ GENERATE_BEANS=true
 GENERATE_CASTOR_MAPPING=true
 GENERATE_XSD=true
 GENERATE_WSDD=true
+GENERATE_HIBERNATE_VALIDATOR=true
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
@@ -158,3 +159,5 @@ GENERATE_WSDD=true
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
+
+CADSR_CONNECTION_URL=
