Set security enabled to false by default...
SVN-Revision: 2003

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -35,7 +35,7 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 #  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
 #
 ##################################################################################
-SECURITY_ENABLED=true
+SECURITY_ENABLED=false
 CSM_PROJECT_NAME=sdk
 INSTANCE_LEVEL_SECURITY=true
 ATTRIBUTE_LEVEL_SECURITY=true
