changed  key values for ApplicationServiceMethodImpl and WritableApplicationServiceMethodImpl
SVN-Revision: 2007

--- a/SDK4/build.properties
+++ b/SDK4/build.properties
@@ -76,8 +76,8 @@ sdk.api.interface=gov.nih.nci.system.applicationservice.ApplicationService
 sdk.api.impl=gov.nih.nci.system.applicationservice.impl.ApplicationServiceImpl
 sdk.dao.impl=gov.nih.nci.system.dao.orm.ORMDAOImpl
 
-readable.security.method.impl=gov.nih.nci.system.util.ApplicationServiceMethodHelper
-writable.security.method.impl=gov.nih.nci.system.util.WritableApiApplicationServiceMethodHelper
+sdk.security.readable.applicationservice.method.impl=gov.nih.nci.system.util.ApplicationServiceMethodHelper
+extension.sdk.security.writable.applicationservice.method.impl=gov.nih.nci.system.util.WritableApiApplicationServiceMethodHelper
 
 HBM2DDL_ENABLED=false
 HBM2DDL_TYPE=validate
