Writable API changes...
SVN-Revision: 2009

--- a/SDK4/junit/build.xml
+++ b/SDK4/junit/build.xml
@@ -198,6 +198,7 @@
 	*********************************************************************** -->
 	<target name="compile">
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" debuglevel="lines,vars,source">
+			<exclude name="**/*Writable*.java" />
 			<exclude name="**/*WS*.java" />
 			<exclude name="**/*XSD*.java" />
 			<exclude name="**/*XMLMapping*.java" />
