Hibernate Validator Implementation Changes
SVN-Revision: 2011

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -46,10 +46,17 @@ CACHE_PROTECTION_ELEMENTS=false
 # 
 #  ENABLE_WRITABLE_API_EXTENSION if set to "yes" then it will change the
 #  service interface and corresponding implementation for writable API
+#
+#  CADSR_CONNECTION_URL if set, will override the default connection provided in 
+#  the caDSR application-config-client.xml file, located under 
+#  /conf/codegen/validator. Used when generating Hibernate Validator 
+#  annotations containing caDSR enumeration(s) for a given domain object attribute.
+#  
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=no
 DATABASE_TYPE=oracle
 IDENTITY_GENERATOR_TAG=<generator class="assigned"/>
+CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
@@ -159,5 +166,3 @@ GENERATE_HIBERNATE_VALIDATOR=true
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
 CACHE_PATH=java.io.tmpdir
-
-CADSR_CONNECTION_URL=
