General changes to property descriptions.
SVN-Revision: 2023

--- a/SDK4/conf/deploy.properties
+++ b/SDK4/conf/deploy.properties
@@ -1,7 +1,7 @@
 ##################################################################################
 #  PROJECT PROPERTIES
 #
-#  Value of the PROJECT_NAME property is used to create/name: 
+#  PROJECT_NAME: used to create/name: 
 #		1) Output project directory folder name
 #		2) Beans JAR file name
 #		3) ORM JAR file name
@@ -10,15 +10,17 @@
 #		6) Web Service Namespace
 #		7) Documentation title in the generated API (Javadocs)
 #
-#  Value of the NAMESPACE_PREFIX is used to create:
+#  NAMESPACE_PREFIX: used to create:
 #		1) XSD's (Schema's) 
 #		2) XML Mapping and Unmapping files.
 #
 #  NOTE:  If XSDs are to be used for the caGRID, the value of the NAMESPACE_PREFIX 
 #  should be the same as the GME namespace
-#
-#  Value of the CSM_PROJECT_NAME property is used as a prefix when creating:
-#		1) The CSM security configuration file name
+# 
+#  WEBSERVICE_NAME: used to create the:
+#		1) Web service name in the Web Services deployment descriptor (WSDD). 
+#		2) Web service URL, which uses the Web service name as a suffix 
+#          (i.e., ${SERVER_URL}/services/${WEBSERVICE_NAME})
 #
 ##################################################################################
 PROJECT_NAME=example
@@ -28,11 +30,17 @@ WEBSERVICE_NAME=${PROJECT_NAME}Service
 ##################################################################################
 #  PROJECT SECURITY PROPERTIES
 #
-#  Value of the INSTANCE_LEVEL_SECURITY is used to enable/disable CSM instance
-#  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
+#  CSM_PROJECT_NAME: used as a prefix when creating the:
+#		1) CSM security configuration file name
 #
-#  Value of the ATTRIBUTE_LEVEL_SECURITY is used to enable/disable CSM attribute
-#  level security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
+#  INSTANCE_LEVEL_SECURITY: used to enable/disable CSM instance level security.
+#  Only relevant if SECURITY_ENABLED property is set to 'true'.
+#
+#  ATTRIBUTE_LEVEL_SECURITY: used to enable/disable CSM attribute level
+#  security.  Only relevant if SECURITY_ENABLED property is set to 'true'.
+#
+#  CACHE_PROTECTION_ELEMENTS: indicates whether or not CSM Protection Elements
+#  should be cached
 #
 ##################################################################################
 SECURITY_ENABLED=false
@@ -44,13 +52,24 @@ CACHE_PROTECTION_ELEMENTS=false
 ##################################################################################
 #  WRITABLE API PROPERTIES
 # 
-#  ENABLE_WRITABLE_API_EXTENSION if set to "yes" then it will change the
-#  service interface and corresponding implementation for writable API
+#  ENABLE_WRITABLE_API_EXTENSION: if set to "yes", will change the
+#  service interface and corresponding implementation for the Writable API
 #
-#  CADSR_CONNECTION_URL if set, will override the default connection provided in 
+#  DATABASE_TYPE: A suffix appended to certain tag value keys (e.g., 
+#  NCI_GENERATOR.<database-type>, NCI_GENERATOR_PROPERTY.<database-type>) added
+#  to the primary key columns within the UML model.  The tag values are used by  
+#  the Hibernate Mapping file transformer to generate primary key settings for a 
+#  given class.  The database-type suffix is necessary when supporting multiple 
+#  databases through the same UML model.
+#
+#  IDENTITY_GENERATOR_TAG:  if using system-wide primary key generator settings,
+#  the value for the primary key generator class.
+#
+#  CADSR_CONNECTION_URL: if set, will override the default connection provided in 
 #  the caDSR application-config-client.xml file, located under 
 #  /conf/codegen/validator. Used when generating Hibernate Validator 
-#  annotations containing caDSR enumeration(s) for a given domain object attribute.
+#  annotations containing caDSR Permissible Value enumeration(s) for a given 
+#  domain object attribute.
 #  
 ##################################################################################
 ENABLE_WRITABLE_API_EXTENSION=no
@@ -61,8 +80,8 @@ CADSR_CONNECTION_URL=http://cadsrapi.nci.nih.gov/cadsrapi40
 ################################################################################## 
 #  APPLICATION SERVER PROPERTIES
 #
-#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file 
-#              any other value will include the log4j.jar in the war file
+#  SERVER_TYPE if set to jboss will exclude log4j.jar from the war file. 
+#              Any other value will include the log4j.jar in the war file
 ##################################################################################
 SERVER_TYPE=other
 SERVER_URL=http://localhost:8080/${PROJECT_NAME}
@@ -70,8 +89,26 @@ SERVER_URL=http://localhost:8080/${PROJECT_NAME}
 ################################################################################## 
 #  MODEL PROPERTIES
 #
-#  XMI_FILE specifies the name of the file which contains the object/data model. 
-#  The file is to be placed under models directory.
+#  MODEL_FILE: specifies the name of the file which contains the object/data  
+#  model.  The file is to be placed under the models directory.
+#
+#  MODEL_FILE_TYPE: specifies whether the object/data model file was created
+#  using Enterprise Architect (EA) or ArgoUML (ARGO).
+#
+#  LOGICAL_MODEL: specifies the name of the base package within the object/data 
+#  model that contains the logical model data.
+#
+#  DATA_MODEL: specifies the name of the base package within the object/data model
+#  that contains the data model data.
+#
+#  INCLUDE_PACKAGE: specifies the name pattern of the parent package within the 
+#  object/data model that should be processed by the code generator.
+#
+#  EXCLUDE_PACKAGE: specifies the name pattern of the parent package within the 
+#  object/data model that should be ignored (not processed) by the code generator.
+
+#  EXCLUDE_NAME: specifies the name pattern of the class(es) within the object/
+#  data model that should be ignored (not processed) by the code generator.
 ##################################################################################
 #MODEL_FILE=sdk.uml
 #MODEL_FILE_TYPE=ARGO
@@ -87,14 +124,14 @@ EXCLUDE_NAME=
 ##################################################################################
 #  DATABASE CONNECTION PROPERTIES
 # 
-#  If USE_JNDI_BASED_CONNECTION=yes then DB_JNDI_URL is used to obtain the 
-#  connection and get data. 
-#  If USE_JNDI_BASED_CONNECTION=no then DB_DRIVER, DB_CONNECTION_URL, DB_USERNAME
-#  and DB_PASSWORD is used to initialize the collection and get data.
+#  USE_JNDI_BASED_CONNECTION:  If set to "yes" then DB_JNDI_URL is used to obtain  
+#  the connection and get data.  If set to "no" then DB_DRIVER, DB_CONNECTION_URL, 
+#  DB_USERNAME and DB_PASSWORD are used instead to initialize the connection and 
+#  get data.
 #
-#  DB_DIALECT is used by the Hibernate to prepare the database specific queries
+#  DB_DIALECT: used by the Hibernate to prepare the database specific queries
 #
-#  CACHE_PATH is being used by the EHCache to store its cache files on disk
+#  CACHE_PATH: used by the EHCache to store its cache files on disk
 ##################################################################################
 USE_JNDI_BASED_CONNECTION=no
 DB_JNDI_URL=java:/SDK
@@ -109,15 +146,15 @@ DB_DIALECT=org.hibernate.dialect.OracleDialect
 ##################################################################################
 #  SECURITY DATABASE CONNECTION PROPERTIES
 #
-#  If CSM_USE_JNDI_BASED_CONNECTION=yes then CSM_DB_JNDI_URL is used to obtain the 
-#  connection and get data. 
-#  If CSM_USE_JNDI_BASED_CONNECTION=no then CSM_DB_DRIVER, CSM_DB_CONNECTION_URL, 
-#  CSM_DB_USERNAME and CSM_DB_PASSWORD is used to initialize the collection and 
+#  USE_JNDI_BASED_CONNECTION:  If set to "yes" then DB_JNDI_URL is used to obtain  
+#  the connection and get data.  If set to "no" then DB_DRIVER, DB_CONNECTION_URL, 
+#  DB_USERNAME and DB_PASSWORD are used instead to initialize the connection and 
 #  get data.
 #
-#  CSM_DB_DIALECT is used by the Hibernate to prepare the database specific queries
+#  CSM_DB_DIALECT: used by the Hibernate to prepare the database specific queries.
+#
 #  If you are using instance level security then the CSM tables are required to be 
-#  present in the same schema as the domain object resides
+#  present in the same schema the domain object resides in
 ##################################################################################
 CSM_USE_JNDI_BASED_CONNECTION=no
 CSM_DB_JNDI_URL=java:/SDK
@@ -149,6 +186,16 @@ CSM_DB_DIALECT=org.hibernate.dialect.OracleDialect
 #  GENERATE_XSD 			if enabled, generates the XSD
 #  GENERATE_WSDD 			if enabled, generates the Web Services Deployment  
 #                 			Descriptor (WSDD) file
+#  GENERATE_HIBERNATE_VALIDATOR
+#				 			if enabled, will generate Hibernate Validator  
+#                 			annotations using caDSR Permissible Values to create
+#							an enumeration of valid values.  Annotations are 
+#							added during code generation to domain object
+#							attributes.  At runtime, the value of domain object 
+#							attributes containing annotations will be validated
+#							prior to insert or update.  This setting is only
+#							valid if the Writable API extension is enabled as
+#							well.
 ##################################################################################
 VALIDATE_LOGICAL_MODEL=true
 VALIDATE_MODEL_MAPPING=true
@@ -161,7 +208,7 @@ GENERATE_HIBERNATE_VALIDATOR=true
 ##################################################################################
 #  ADVANCED PROPERTIES
 #
-#  CACHE_PATH is being used by the EHCache to store its cache files on disk
+#  CACHE_PATH: used by the EHCache to store its cache files on disk
 #  java.io.tmpdir will create the cache files in the temporary directory. 
 #  User can choose to specify any absolute path for the cache files
 ##################################################################################
